--- a/main.css
+++ b/main.css
@@ -14,16 +14,13 @@
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
-    /* text-align: center; */
+    text-align: center;
     margin-top: 20px;
     /* border: 2px solid red; */
 }
-
-.content-area h1,
-p {
+.second-title{
     text-align: center;
 }
-
 .content-area h1 {
     font-size: 35px;
 }
@@ -163,10 +160,13 @@ p {
     top: 30px;
     margin-bottom: 30px;
 }
-
+.date p{
+    text-align: center;
+}
 .profile-card-body p {
     color: #eb4034;
     font-weight: 600;
+    text-align: center;
 }
 
 .fa-instagram,
@@ -184,4 +184,91 @@ p {
 
 .social-icon a {
     margin-right: 5px;
+}
+
+/* shoe section  */
+.shoe {
+    background-color: #eb4034;
+    width: 100%;
+    height: 80vh;
+    margin-bottom: 100px;
+}
+
+.shoe-area {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 60vh;
+    background-color: white;
+    box-shadow: 2px 2px 5px gray, -2px -2px 5px gray;
+    /* border: 2px solid green; */
+    border-radius: 10px;
+    position: relative;
+    top: 10vh;
+    padding: 30px;
+}
+
+.left-segment {
+    width: 40%;
+    height: 100%;
+    /* border: 2px solid red; */
+    display: inline-block;
+    vertical-align: top;
+    /* text-align: center; */
+}
+.left-segment img{
+    width: 80%;
+}
+.right-segment {
+    width: 60%;
+    height: 100%;
+    /* border: 2px solid green; */
+    display: inline-block;
+    padding-left: 40px;
+    margin-top: 105px;
+}
+.right-segment h3, h1, button{
+    text-transform: uppercase;
+}
+.right-segment h3, .price{
+    color: #eb4034;
+}
+.right-segment h1, p, button{
+    margin-bottom: 20px;
+    text-align: left;
+}
+.right-segment h1{
+    font-size: 40px;
+}
+.right-segment 
+.right-segment p{
+    text-align: justify;
+}
+.size{
+    padding-left: 20px;
+}
+.size h3{
+    color: #eb4034;
+}
+.size span{
+    display: inline-block;
+    margin-top: 10px;
+    border: 1px solid #eb4034;
+    padding: 6px 12px;
+    margin-right: 10px;
+}
+.size span:hover{
+    background-color:#eb4034;
+    color: white;
+}
+.right-segment button{
+    padding: 10px 40px;
+    background-color:#eb4034;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+}
+.fa-cart-shopping{
+    margin-left: 5px;
 }
