--- a/main.css
+++ b/main.css
@@ -10,12 +10,13 @@
 }
 
 .content-area {
-    height: 100vh;
+    /* height: 100vh; */
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 100px;
     /* border: 2px solid red; */
 }
 .second-title{
@@ -40,20 +41,21 @@
 }
 
 .card-area {
-    margin-top: 100px;
+    margin-top: 50px;
     width: 100%;
     /* border: 2px solid green; */
     /* padding-left: 5%; */
 }
 
 .card-body {
-    width: calc(90% / 3);
+    width: calc(100% / 3 - 40px);
     /* height: 600px; */
     /* border: 2px solid red; */
     display: inline-block;
     box-shadow: 2px 2px 5px gray, -2px -2px 5px gray;
     vertical-align: top;
-    margin-left: 2.2%;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .card-banner {
@@ -125,7 +127,7 @@
 .profile-area {
     background-color: #eb4034;
     width: 100%;
-    height: 30vh;
+    /* height: 30vh; */
     margin-top: 300px;
     margin-bottom: 100px;
     position: relative;
@@ -138,16 +140,17 @@
 }
 
 .profile-card-body {
-    width: calc(90% / 3);
+    width: calc(100% / 3 - 40px);
     /* height: 300px; */
     background-color: white;
     /* border: 2px solid red; */
     display: inline-block;
     box-shadow: 2px 2px 5px gray, -2px -2px 5px gray;
     vertical-align: top;
-    margin-left: 2.2%;
+    margin-left: 20px;
+    margin-right: 20px;
     position: relative;
-    top: -150px;
+    top: -130px;
     text-align: center;
 }
 
@@ -190,30 +193,32 @@
 .shoe {
     background-color: #eb4034;
     width: 100%;
-    height: 80vh;
+    /* height: 80vh; */
     margin-bottom: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .shoe-area {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
-    height: 60vh;
+    /* height: 60vh; */
     background-color: white;
     box-shadow: 2px 2px 5px gray, -2px -2px 5px gray;
     /* border: 2px solid green; */
     border-radius: 10px;
-    position: relative;
-    top: 10vh;
+    /* position: relative; */
+    /* top: 10vh; */
     padding: 30px;
 }
 
 .left-segment {
     width: 40%;
-    height: 100%;
+    /* height: 100%; */
     /* border: 2px solid red; */
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     /* text-align: center; */
 }
 .left-segment img{
@@ -221,11 +226,13 @@
 }
 .right-segment {
     width: 60%;
-    height: 100%;
+    /* height: 100%; */
     /* border: 2px solid green; */
     display: inline-block;
     padding-left: 40px;
-    margin-top: 105px;
+    /* margin-top: 110px; */
+    vertical-align: middle;
+    padding-top: 120px;
 }
 .right-segment h3, h1, button{
     text-transform: uppercase;
